kubernetes/orion/manifests/default/kavita/kavita-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kavita-route
  namespace: kavita
spec:
  parentRefs:
  - name: default-gateway
    namespace: istio-ingress
  hostnames:
  - "kavita.bou1der.net"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kavita-service
      port: 80
